0.7.0.0
Add new function New-BcImage to create an image based on artifacts
Add artifacts support for New-BcContainer
Add downloads cleanup for Flush-ContainerHelperCache

0.6.5.11
Set Accept_Outdated to $true as default value to accomodate that images are built on pre-february update WindowsServerCore imageName
Check validationResults in Get-Tests loop
Windows Defender acuses New-NavContainer of containing a virus

0.6.5.10
Issue #985 Tests report failure wrongly

0.6.5.9
Issue #981 Run-Tests fail on 16.x containers
Issue #974 Compile of app fails when using customized application.app

0.6.5.8
Add Parameter -includeTestFrameworkOnly to install the Test Framework without the Test Libraries
Issue #978 - do not use local docker.ico when creating shortcuts

0.6.5.7
Issue #921 - Using -useBestContainerOS with foreign database specification fails
Issue #959 - Specifying applicationinsights in app.json without application property throws exception
PR #949 - support swarm services (Thanks Tobias Fenster)
Add parameter profile to Get-Tests and Run-Tests to be able to run tests as a specific profile
Issue #944 - reset position in repeater
Support Windows 10 2004
Issue #971 - Implicit creation of destination folder in Copy-FileToBcContainer

0.6.5.6
Issue #929 - Get-NavContainerSharedFolders doesn't support :rw or :ro on volumes
Issue #934 - Restart instance after creation of new symbolic link
Issue #924 - Compile App failed - AlcOutput is null
Issue #940 - Vsix analyzer DLLs are not under Win32

0.6.5.5
Use .net core version of alc.exe if available

0.6.5.4
Regression - Issue #930 - Revert fix for #918

0.6.5.3
Issue #918 - Migration of Legacy VeriSign and Symantec Time Stamping Services
Issue #925 - Path Test Apps for 16.0 onprem rtm version

0.6.5.2
Regression - Issue #914 getting generic tag before the image has been pulled

0.6.5.1
Force tls1.2 when using Setup-TraefikContainerForBcContainers