@@ -2,6 +2,8 @@
 Add new function New-BcImage to create an image based on artifacts
 Add artifacts support for New-BcContainer
 Add downloads cleanup for Flush-ContainerHelperCache
+Issue #1006 - remove files instead of folder (if a lock is on the folder)
+Exit waiting for container to be ready if the container exits
 
 0.6.5.11
 Set Accept_Outdated to $true as default value to accomodate that images are built on pre-february update WindowsServerCore imageName
